Refactor the GetServiceStatistical and add GetServiceAmount.
