# controller/service.go
@@ -23,7 +23,6 @@ func (p *ServiceController) RouterRegister(group *gin.RouterGroup) {
 	group.POST("/grpc/add", p.AddGrpcService)
 	group.POST("/grpc/update", p.UpdateGrpcService)
 	group.GET("/stat", p.GetServiceStat)
-	group.GET("/statistical", p.GetServiceStatistical)
 }
 
 func (p *ServiceController) RouterGroupName() string {
@@ -49,22 +48,6 @@ func (p *ServiceController) Middlewares() (middlewares []gin.HandlerFunc) {
 		middleware.SessionAuthMiddleware(),
 		middleware.TranslationMiddleware(),
 	}
-}
-
-// GetServiceDetail godoc
-// @Summary 获服务统计
-// @Description 获服务统计
-// @Tags 服务接口
-// @ID /service/total
-// @Accept  json
-// @Produce  json
-// @Param query query dto.GetServiceStatisticalInput true "query"
-// @Success 200 {object} dto.Response{data=dto.GetServiceStatisticalOutput} "success"
-// @Router /service/total [get]
-func (p *ServiceController) GetServiceStatistical(c *gin.Context) {
-	exec := &dto.GetServiceStatisticalInput{}
-	exec.ErrorHandle(exec.OutputHandle(exec.ExecHandle(exec.BindValidParam)))(c)
-	return
 }
 
 // GetServiceDetail godoc
