# docs/swagger.json
@@ -522,7 +522,7 @@
                 }
             }
         },
-        "/service/total": {
+        "/statistics/service/amount": {
             "get": {
                 "description": "获服务统计",
                 "consumes": [
@@ -532,10 +532,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "服务接口"
+                    "统计接口"
                 ],
                 "summary": "获服务统计",
-                "operationId": "/service/total",
+                "operationId": "/statistics/service/amount",
                 "responses": {
                     "200": {
                         "description": "success",
@@ -548,7 +548,43 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/dto.GetServiceStatisticalOutput"
+                                            "$ref": "#/definitions/dto.GetServiceAmountOutput"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/statistics/total": {
+            "get": {
+                "description": "获取仪表盘统计数据",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "统计接口"
+                ],
+                "summary": "获取仪表盘统计数据",
+                "operationId": "/statistics/total",
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.GetTotalOutput"
                                         }
                                     }
                                 }
@@ -879,6 +915,23 @@
                 }
             }
         },
+        "dto.GetServiceAmountInput": {
+            "type": "object"
+        },
+        "dto.GetServiceAmountOutput": {
+            "type": "object",
+            "properties": {
+                "GRPC": {
+                    "type": "integer"
+                },
+                "HTTP": {
+                    "type": "integer"
+                },
+                "TCP": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.GetServiceDetailForHttpOutput": {
             "type": "object",
             "required": [
@@ -1056,19 +1109,22 @@
                 }
             }
         },
-        "dto.GetServiceStatisticalInput": {
+        "dto.GetTotalInput": {
             "type": "object"
         },
-        "dto.GetServiceStatisticalOutput": {
+        "dto.GetTotalOutput": {
             "type": "object",
             "properties": {
-                "GRPC": {
+                "qpd": {
                     "type": "integer"
                 },
-                "HTTP": {
+                "qps": {
                     "type": "integer"
                 },
-                "TCP": {
+                "service_amount": {
+                    "type": "integer"
+                },
+                "tenant_amount": {
                     "type": "integer"
                 }
             }
