# dto/service.go
@@ -433,58 +433,3 @@ func (g *GetServiceStatInput) ErrorHandle(handle FunctionalHandle) func(c *gin.C
 		return
 	}
 }
-
-type GetServiceStatisticalInput struct {
-}
-
-type GetServiceStatisticalOutput struct {
-	TCP  int64 `json:"TCP"`
-	HTTP int64 `json:"HTTP"`
-	GRPC int64 `json:"GRPC"`
-}
-
-func (g *GetServiceStatisticalInput) BindValidParam(c *gin.Context) (params interface{}, err error) {
-	return
-}
-
-func (g *GetServiceStatisticalInput) ExecHandle(handle FunctionalHandle) FunctionalHandle {
-	return func(c *gin.Context) (out interface{}, err error) {
-		_, err = handle(c)
-		if err != nil {
-			return
-		}
-		db := lib.GetDefaultDB()
-		data := &GetServiceStatisticalOutput{}
-		err = db.Model(&dao.ServiceHTTPRule{}).Count(&data.HTTP).Error
-		if err != nil {
-			return nil, err
-		}
-		err = db.Model(&dao.ServiceTCPRule{}).Count(&data.TCP).Error
-		if err != nil {
-			return nil, err
-		}
-		err = db.Model(&dao.ServiceGrpcRule{}).Count(&data.GRPC).Error
-		if err != nil {
-			return nil, err
-		}
-		return data, err
-	}
-}
-
-func (g *GetServiceStatisticalInput) OutputHandle(handle FunctionalHandle) FunctionalHandle {
-	return func(c *gin.Context) (out interface{}, err error) {
-		return handle(c)
-	}
-}
-
-func (g *GetServiceStatisticalInput) ErrorHandle(handle FunctionalHandle) func(c *gin.Context) {
-	return func(c *gin.Context) {
-		data, err := handle(c)
-		if err == nil {
-			ResponseSuccess(c, data)
-			return
-		}
-		ResponseError(c, 2002, err)
-		return
-	}
-}
